smooth scroll on mobile fix

--- a/css/settings.css
+++ b/css/settings.css
@@ -32,3 +32,7 @@ a {
     margin: 0 auto;
     padding: 0 60px;
 }
+
+section {
+    scroll-margin: 100px;
+}
